fix layout issues and improve intro line.

--- a/landing/style.css
+++ b/landing/style.css
@@ -10,8 +10,8 @@
 }
 
 body {
-	min-height: 100vh;
-	font-family:  'Inter', sans-serif, system-ui;
+  min-height: 100vh;
+  font-family:  'Inter', sans-serif, system-ui;
   background: var(--surface-1);
   display: grid;
   justify-items: center;
@@ -37,20 +37,36 @@ footer {
 }
 
 header {
+  position: relative;
   min-height: 100vh;
   display: grid;
   align-content: center;
+  padding-bottom: 8rem;
+  margin-bottom: 12rem
 }
 
 h1 {
-  font-weight: 380;
+  font-weight: 32;
   font-family: Visby Thin;
-  font-size: calc(var(--font-size-fluid-3) * 2.2);
+  font-size: calc(var(--font-size-fluid-3) * 1.9);
   line-height: 1.1;
+  z-index: 2;
+  position: relative;
+}
+
+h2 {
+  font-weight: 400;
+  font-family: Visby Thin;
+  font-size: calc(var(--font-size-fluid-3) * 0.8);
+  line-height: 1.1;
+  z-index: 2;
+  opacity: 0.75;
+  position: relative;
+  white-space: nowrap;
 }
 
 .sr-only {
-	position: absolute;
+  position: absolute;
   width: 1px;
   height: 1px;
   padding: 0;
@@ -61,24 +77,15 @@ h1 {
   border-width: 0;
 }
 
-header {
-  position: relative;
-}
-
 header img {
   position: absolute;
   left: 25%;
-  top: 15%;
+  top: 16%;
   z-index: 1;
   opacity: 0.65;
   filter: saturate(0.5);
   -webkit-clip-path: polygon(0 15%, 75% 0, 100% 32%, 80% 100%, 0 67%);
           clip-path: polygon(0 15%, 75% 0, 100% 32%, 80% 100%, 0 67%);
-}
-
-h1 {
-  z-index: 2;
-  position: relative;
 }
 
 section {
@@ -106,6 +113,7 @@ section p {
   font-size: 1.2rem;
   font-family: Helvetica;
   line-height: 1.6;
+  min-width: 16rem;
 }
 
 @media(prefers-color-scheme: dark) {
@@ -194,7 +202,7 @@ section p {
   }
 }
  /* social media button styles */
- .fa {
+.fa {
   padding: 20px;
   font-size: 30px;
   width: 30px;
